tracing-backup-20250723-194133/misc/network-policies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2025-07-17T19:09:45Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: salt
      app.kubernetes.io/name: backup
      app.kubernetes.io/part-of: metalk8s
      heritage: salt
      metalk8s.scality.com/version: 130.0.1-dev
    name: backup-replication
    namespace: kube-system
    resourceVersion: "448"
    uid: d0dca426-fb3a-43ae-9a2b-e17dfa5fec0f
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: backup-replication
      ports:
      - port: 443
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/name: backup
    policyTypes:
    - Ingress
    - Egress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"data-db","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"mongodb-sharded","app.kubernetes.io/version":"7.0.6","helm.sh/chart":"mongodb-sharded-7.9.1"},"name":"data-db-mongodb-sharded","namespace":"zenko"},"spec":{"egress":[{}],"ingress":[{"ports":[{"port":27017},{"port":9216}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/instance":"data-db [...]
    creationTimestamp: "2025-07-17T19:44:45Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: data-db
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mongodb-sharded
      app.kubernetes.io/version: 7.0.6
      helm.sh/chart: mongodb-sharded-7.9.1
    name: data-db-mongodb-sharded
    namespace: zenko
    resourceVersion: "20729"
    uid: 17c97278-cd65-4f62-856f-30a1e2fce920
  spec:
    egress:
    - {}
    ingress:
    - ports:
      - port: 27017
        protocol: TCP
      - port: 9216
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/instance: data-db
        app.kubernetes.io/name: mongodb-sharded
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
